testsuite/tests/properties/invalid_memoized_trans/test.out
== foo.lkt ==
foo.lkt:18:25: error: Property cannot be memoized (in Example.get_var: Cannot memoize extracting the value of a logic variable, call chain is: Example.get_var)
18 |     @exported @memoized fun get_var(): Entity[FooNode] = node.var.get_value()
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

foo.lkt:28:25: error: Property cannot be memoized (in Example.get_var2: Cannot memoize extracting the value of a logic variable, call chain is: Example.get_var2_public_wrapper -> Example.get_var2)
28 |     @exported @memoized fun get_var2_public_wrapper(): Entity[FooNode] =

foo.lkt:57:25: error: Property cannot be memoized (in Example.get_something_unmemoizable: get_something_unmemoizable is unmemoizable, call chain is: Example.get_var4_public_wrapper -> Example.get_var4 -> Example.get_something_unmemoizable)
57 |     @exported @memoized fun get_var4_public_wrapper(): Entity[FooNode] =

foo.lkt:33:25: error: Property cannot be memoized (in Example.get_var2: Cannot memoize extracting the value of a logic variable, call chain is: Example.top_wrapper -> Example.get_var2)
33 |     @exported @memoized fun top_wrapper(): Bool =
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
